print-managment: fix left-align on hover
- Refactor hover sizing so only overrides are listed in @media.
- Fix hover state to adjust based on padded-left value and keep
  left-align.

Before screencast: http://go/scrcast/NTMyMDAwNDE1NDE2MzIwMHxlMzdjYjljNS1iNQ
After w/ Jelly: http://go/scrcast/NjExMzEyODI1MDA4MTI4MHxlM2FlMzBlMy1mMA
After w/o Jelly: http://go/scrcast/NTA0MzgxNTA3NDIzNDM2OHxjZjk5YjFmMy02Mw

Bug: b:275718921
Test: Manually verified UI.
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/4523569
Commit-Queue: Ashley Prasad <ashleydp@google.com>
Cr-Commit-Position: refs/heads/main@{#1142930}

--- a/ash/webui/print_management/resources/print_management_shared.css
+++ b/ash/webui/print_management/resources/print_management_shared.css
@@ -10,6 +10,12 @@
  * #include=cr-shared-style cros-color-overrides
  * #css_wrapper_metadata_end */
 
+:host {
+  /* Margin on hover for responsive layout adjusts based on padded-left minus
+     16px to align left. */
+  --active-status-hover-margin: calc(var(--padded-left) - 16px);
+}
+
 :host-context(body.jelly-enabled) .main-container {
   display: flex;
   flex-flow: column;
@@ -135,9 +141,16 @@
 
 #activeStatusContainer:hover {
   background-color: rgba(var(--google-blue-600-rgb), 0.06);
+  border-radius: 16px;
+  margin-inline-start: 16px;
+  padding-inline-start: 16px;
 }
 
 @media (min-width: 600px) and (max-width: 767px) {
+  :host {
+    --padded-left: 32px;
+  }
+
   :host-context(body.jelly-enabled) #headerContainer {
     margin-inline: 20px;
   }
@@ -163,7 +176,7 @@
   }
 
   .padded-left {
-    margin-inline-start: 32px;
+    margin-inline-start: var(--padded-left);
   }
 
   .printer-name-column {
@@ -175,13 +188,15 @@
   }
 
   #activeStatusContainer:hover {
-    border-radius: 16px;
-    margin-inline-start: 16px;
-    padding-inline-start: 16px;
+    margin-inline-start: var(--active-status-hover-margin);
   }
 }
 
 @media (min-width: 768px) and (max-width: 959px) {
+  :host {
+    --padded-left: 40px;
+  }
+
   :host-context(body.jelly-enabled) #headerContainer {
     margin-inline: 20px;
   }
@@ -207,7 +222,7 @@
   }
 
   .padded-left {
-    margin-inline-start: 40px;
+    margin-inline-start: var(--padded-left);
   }
 
   .printer-name-column {
@@ -219,13 +234,15 @@
   }
 
   #activeStatusContainer:hover {
-    border-radius: 16px;
-    margin-inline-start: 16px;
-    padding-inline-start: 16px;
+    margin-inline-start: var(--active-status-hover-margin);
   }
 }
 
 @media (min-width: 960px) and (max-width: 1279px) {
+  :host {
+    --padded-left: 48px;
+  }
+
   :host-context(body.jelly-enabled) #headerContainer {
     margin-inline: 32px;
   }
@@ -251,7 +268,7 @@
   }
 
   .padded-left {
-    margin-inline-start: 48px;
+    margin-inline-start: var(--padded-left);
   }
 
   .printer-name-column {
@@ -263,13 +280,15 @@
   }
 
   #activeStatusContainer:hover {
-    border-radius: 16px;
-    margin-inline-start: 16px;
-    padding-inline-start: 16px;
+    margin-inline-start: var(--active-status-hover-margin);
   }
 }
 
 @media (min-width: 1280px) {
+  :host {
+    --padded-left: 56px;
+  }
+
   :host-context(body.jelly-enabled) #headerContainer {
     margin-inline: 72px;
   }
@@ -295,7 +314,7 @@
   }
 
   .padded-left {
-    margin-inline-start: 56px;
+    margin-inline-start: var(--padded-left);
   }
 
   .printer-name-column {
@@ -307,8 +326,6 @@
   }
 
   #activeStatusContainer:hover {
-    border-radius: 16px;
-    margin-inline-start: 16px;
-    padding-inline-start: 16px;
+    margin-inline-start: var(--active-status-hover-margin);
   }
 }
